add more org details

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/apple-touch-icon-114x114.png" />
-    <meta name="theme-color" content="#e5a" />
+    <meta name="theme-color" content="#f55555" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin /> //-->
     <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
