--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,13 @@
   <head>
     <meta charset="UTF-8" />
     <base href="%PUBLIC_URL%/">
-    <title>Covidonation &ndash; Ways to help in Coronavirus (COVID-19)</title>
+    <title>Covidonation &ndash; Ways to help in Coronavirus (COVID-19) panedmic</title>
     <meta name="description" content="List of resources, donations, charities and information on ways to help in Coronavirus (COVID-19) pandemic." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/apple-touch-icon-114x114.png" />
     <meta name="theme-color" content="#f55555" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin /> //-->
     <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon-114x114.png" />
 
