--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="UTF-8" />
     <base href="%PUBLIC_URL%/" />
-    <title>Covidonation &ndash; Ways to help in Coronavirus (COVID-19) panedmic</title>
+    <title>COVIDonation - Ways to help in Coronavirus (COVID-19) panedmic</title>
     <meta
       name="description"
       content="List of resources, donations, charities and information on ways to help in Coronavirus (COVID-19) pandemic."
